Weekly OpenApiDocs Download.

--- a/openApiDocs/beta/BackupRestore.yml
+++ b/openApiDocs/beta/BackupRestore.yml
@@ -454,7 +454,11 @@ paths:
     get:
       tags:
         - solutions.backupRestoreRoot
-      summary: Get browseSessions from solutions
+      summary: List browseSessions
+      description: Get a list of the browseSessionBase objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/backuprestoreroot-list-browsesessions?view=graph-rest-beta
       operationId: solution.backupRestore_ListBrowseSession
       parameters:
         - $ref: '#/components/parameters/top'
@@ -528,6 +532,7 @@ paths:
       tags:
         - solutions.backupRestoreRoot
       summary: Get browseSessions from solutions
+      description: The list of browse sessions in the tenant.
       operationId: solution.backupRestore_GetBrowseSession
       parameters:
         - name: browseSessionBase-id
@@ -3667,7 +3672,11 @@ paths:
     get:
       tags:
         - solutions.backupRestoreRoot
-      summary: Get oneDriveForBusinessBrowseSessions from solutions
+      summary: List oneDriveForBusinessBrowseSessions
+      description: Get a list of the oneDriveForBusinessBrowseSession objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/backuprestoreroot-list-onedriveforbusinessbrowsesessions?view=graph-rest-beta
       operationId: solution.backupRestore_ListOneDriveGraphFPreBusinessBrowseSession
       parameters:
         - $ref: '#/components/parameters/top'
@@ -3717,7 +3726,11 @@ paths:
     post:
       tags:
         - solutions.backupRestoreRoot
-      summary: Create new navigation property to oneDriveForBusinessBrowseSessions for solutions
+      summary: Create oneDriveForBusinessBrowseSession
+      description: Create a new oneDriveForBusinessBrowseSession object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/backuprestoreroot-post-onedriveforbusinessbrowsesessions?view=graph-rest-beta
       operationId: solution.backupRestore_CreateOneDriveGraphFPreBusinessBrowseSession
       requestBody:
         description: New navigation property
@@ -3740,7 +3753,11 @@ paths:
     get:
       tags:
         - solutions.backupRestoreRoot
-      summary: Get oneDriveForBusinessBrowseSessions from solutions
+      summary: Get oneDriveForBusinessBrowseSession
+      description: Read the properties and relationships of oneDriveForBusinessBrowseSession object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/onedriveforbusinessbrowsesession-get?view=graph-rest-beta
       operationId: solution.backupRestore_GetOneDriveGraphFPreBusinessBrowseSession
       parameters:
         - name: oneDriveForBusinessBrowseSession-id
@@ -5210,7 +5227,11 @@ paths:
     get:
       tags:
         - solutions.backupRestoreRoot
-      summary: Get granularDriveRestoreArtifacts from solutions
+      summary: List granularDriveRestoreArtifacts
+      description: Get a list of the granularDriveRestoreArtifact objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/onedriveforbusinessrestoresession-list-granulardriverestoreartifacts?view=graph-rest-beta
       operationId: solution.backupRestore.oneDriveGraphFPreBusinessRestoreSession_ListGranularDriveRestoreArtifact
       parameters:
         - name: oneDriveForBusinessRestoreSession-id
@@ -5301,6 +5322,7 @@ paths:
       tags:
         - solutions.backupRestoreRoot
       summary: Get granularDriveRestoreArtifacts from solutions
+      description: A collection of browse session id and item key details that can be used to restore OneDrive for work or school files and folders.
       operationId: solution.backupRestore.oneDriveGraphFPreBusinessRestoreSession_GetGranularDriveRestoreArtifact
       parameters:
         - name: oneDriveForBusinessRestoreSession-id
@@ -7023,7 +7045,11 @@ paths:
     get:
       tags:
         - solutions.backupRestoreRoot
-      summary: Get sharePointBrowseSessions from solutions
+      summary: List sharePointBrowseSessions
+      description: Get a list of the sharePointBrowseSession objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/backuprestoreroot-list-sharepointbrowsesessions?view=graph-rest-beta
       operationId: solution.backupRestore_ListSharePointBrowseSession
       parameters:
         - $ref: '#/components/parameters/top'
@@ -7073,7 +7099,11 @@ paths:
     post:
       tags:
         - solutions.backupRestoreRoot
-      summary: Create new navigation property to sharePointBrowseSessions for solutions
+      summary: Create sharePointBrowseSession
+      description: Create a new sharePointBrowseSession object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/backuprestoreroot-post-sharepointbrowsesessions?view=graph-rest-beta
       operationId: solution.backupRestore_CreateSharePointBrowseSession
       requestBody:
         description: New navigation property
@@ -7096,7 +7126,11 @@ paths:
     get:
       tags:
         - solutions.backupRestoreRoot
-      summary: Get sharePointBrowseSessions from solutions
+      summary: Get sharePointBrowseSession
+      description: Read the properties and relationships of sharePointBrowseSession object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/sharepointbrowsesession-get?view=graph-rest-beta
       operationId: solution.backupRestore_GetSharePointBrowseSession
       parameters:
         - name: sharePointBrowseSession-id
@@ -7886,7 +7920,7 @@ paths:
       tags:
         - solutions.backupRestoreRoot
       summary: Create sharePointRestoreSession
-      description: Create a new sharePointRestoreSession object.
+      description: 'Create a new sharePointRestoreSession object. To create a granular restore session, granular site restore artifacts must be present in the payload. A request can''t include both granularSiteRestoreArtifact and siteRestoreArtifact in the same create or update request. If no payload is provided when you create the restore session, the request creates an empty standard restore session by default.'
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/backuprestoreroot-post-sharepointrestoresessions?view=graph-rest-beta
@@ -7957,7 +7991,11 @@ paths:
     patch:
       tags:
         - solutions.backupRestoreRoot
-      summary: Update the navigation property sharePointRestoreSessions in solutions
+      summary: Update sharePointRestoreSession
+      description: Update the properties of a sharePointRestoreSession object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/sharepointrestoresession-update?view=graph-rest-beta
       operationId: solution.backupRestore_UpdateSharePointRestoreSession
       parameters:
         - name: sharePointRestoreSession-id
@@ -8015,7 +8053,11 @@ paths:
     get:
       tags:
         - solutions.backupRestoreRoot
-      summary: Get granularSiteRestoreArtifacts from solutions
+      summary: List granularSiteRestoreArtifacts
+      description: Get a list of the granularSiteRestoreArtifact objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/sharepointrestoresession-list-granularsiterestoreartifacts?view=graph-rest-beta
       operationId: solution.backupRestore.sharePointRestoreSession_ListGranularSiteRestoreArtifact
       parameters:
         - name: sharePointRestoreSession-id
@@ -8106,6 +8148,7 @@ paths:
       tags:
         - solutions.backupRestoreRoot
       summary: Get granularSiteRestoreArtifacts from solutions
+      description: A collection of browse session id and item key details that can be used to restore SharePoint files and folders.
       operationId: solution.backupRestore.sharePointRestoreSession_GetGranularSiteRestoreArtifact
       parameters:
         - name: sharePointRestoreSession-id
@@ -9405,6 +9448,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.browseSessionBase'
+              description: The list of browse sessions in the tenant.
               x-ms-navigationProperty: true
             driveInclusionRules:
               type: array
@@ -9458,6 +9502,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.oneDriveForBusinessBrowseSession'
+              description: The list of onedriveforbusiness browse sessions in the tenant.
               x-ms-navigationProperty: true
             oneDriveForBusinessProtectionPolicies:
               type: array
@@ -9505,6 +9550,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.sharePointBrowseSession'
+              description: The list of sharepoint browse sessions in the tenant.
               x-ms-navigationProperty: true
             sharePointProtectionPolicies:
               type: array
@@ -9574,10 +9620,12 @@ components:
           properties:
             backupSizeInBytes:
               type: string
+              description: The size of the backup in bytes.
               nullable: true
             createdDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: 'The date and time when the browse session was created. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
               format: date-time
               nullable: true
             error:
@@ -9585,11 +9633,13 @@ components:
             expirationDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: The date and time after which the browse session is deleted automatically.
               format: date-time
               nullable: true
             restorePointDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: The date and time of the restore point on which the browse session is created.
               format: date-time
               nullable: true
             status:
@@ -9620,23 +9670,28 @@ components:
       properties:
         itemKey:
           type: string
+          description: Unique identifier of the returned item.
           nullable: true
         itemsCount:
           maximum: 2147483647
           minimum: -2147483648
           type: number
+          description: 'The count of items present within the items; for example, the count of files in a folder.'
           format: int32
           nullable: true
         name:
           type: string
+          description: The name of the item.
           nullable: true
         sizeInBytes:
           type: string
+          description: The size of the item in bytes.
           nullable: true
         type:
           $ref: '#/components/schemas/microsoft.graph.browseQueryResponseItemType'
         webUrl:
           type: string
+          description: The web URL of the item.
           nullable: true
       additionalProperties:
         type: object
@@ -9941,6 +9996,7 @@ components:
           properties:
             directoryObjectId:
               type: string
+              description: Id of the backed-up OneDrive.
               nullable: true
           additionalProperties:
             type: object
@@ -9991,6 +10047,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.granularDriveRestoreArtifact'
+              description: A collection of browse session id and item key details that can be used to restore OneDrive for work or school files and folders.
               x-ms-navigationProperty: true
           additionalProperties:
             type: object
@@ -10044,6 +10101,7 @@ components:
           properties:
             directoryObjectId:
               type: string
+              description: Id of the drive in which artifact is present.
               nullable: true
           additionalProperties:
             type: object
@@ -10077,6 +10135,11 @@ components:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
               description: 'The date and time when the policy was last modified. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              format: date-time
+              nullable: true
+            offboardRequestedDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
               format: date-time
               nullable: true
             protectionMode:
@@ -10299,6 +10362,7 @@ components:
           properties:
             siteId:
               type: string
+              description: Id of the backed-up SharePoint site.
               nullable: true
           additionalProperties:
             type: object
@@ -10369,6 +10433,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.granularSiteRestoreArtifact'
+              description: A collection of browse session id and item key details that can be used to restore SharePoint files and folders.
               x-ms-navigationProperty: true
             siteRestoreArtifacts:
               type: array
@@ -10392,6 +10457,7 @@ components:
           properties:
             siteId:
               type: string
+              description: Id of the site in which artifact is present.
               nullable: true
           additionalProperties:
             type: object
@@ -10730,35 +10796,43 @@ components:
           properties:
             browseSessionId:
               type: string
+              description: The unique identifier of the browseSession
               nullable: true
             completionDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: Date time when the artifact's restoration completes.
               format: date-time
               nullable: true
             restoredItemKey:
               type: string
+              description: The unique identifier for the restored artifact.
               nullable: true
             restoredItemPath:
               type: string
+              description: The path of the restored artifact. It's the path of the folder where all the artifacts are restored within a granular restore session.
               nullable: true
             restoredItemWebUrl:
               type: string
+              description: The web url of the restord artifact.
               nullable: true
             restorePointDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: The restore point date time to which the artifact is restored.
               format: date-time
               nullable: true
             startDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: The start time of the restoration.
               format: date-time
               nullable: true
             status:
               $ref: '#/components/schemas/microsoft.graph.artifactRestoreStatus'
             webUrl:
               type: string
+              description: The original web url of the artifact being restored.
               nullable: true
           additionalProperties:
             type: object
@@ -10828,6 +10902,8 @@ components:
         - active
         - unknownFutureValue
         - dormant
+        - offboardRequested
+        - offboarded
       type: string
     microsoft.graph.protectionSource:
       title: protectionSource
