set networkIsolationPolicy to permissive

--- a/.azure-pipelines/command-metadata-refresh.yml
+++ b/.azure-pipelines/command-metadata-refresh.yml
@@ -47,6 +47,8 @@ extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
     pool: $(BuildAgent)
+    settings:
+      networkIsolationPolicy: Permissive
     sdl:
       binskim:
         enabled: false
