--- a/.azure-pipelines/command-metadata-refresh.yml
+++ b/.azure-pipelines/command-metadata-refresh.yml
@@ -2,8 +2,6 @@
 # Please make sure to check all the converted content, it is your team's responsibility to make sure that the pipeline is still valid and functions as expected.
 # This pipeline will be extended to the OneESPT template
 # If you are not using the E+D shared hosted pool with windows-2022, replace the pool section with your hosted pool, os, and image name. If you are using a Linux image, you must specify an additional windows image for SDL: https://eng.ms/docs/cloud-ai-platform/devdiv/one-engineering-system-1es/1es-docs/1es-pipeline-templates/features/sdlanalysis/overview#how-to-specify-a-windows-pool-for-the-sdl-source-analysis-stage
-# The Task 'PublishBuildArtifacts@1' has been converted to an output named 'Publish Module Artifacts' in the templateContext section.
-# The Task 'NuGetCommand@2' has been converted to an output named 'Publish NuGet to feed' in the templateContext section. 
 
 name: $(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 parameters:
@@ -49,6 +47,8 @@ extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
     pool: $(BuildAgent)
+    settings:
+      networkIsolationPolicy: Permissive
     sdl:
       binskim:
         enabled: false
@@ -62,13 +62,23 @@ extends:
     stages:
     - stage: stage
       jobs:
-      - job: CreateMetadataRefreshBranch
-        displayName: Create Metadata Refresh Branch
+      - job: MsGraphPsSdkModuleCommandMetadataGeneration
+        templateContext:
+          isProduction: true
+        displayName: Microsoft Graph PowerShell SDK Generation
         timeoutInMinutes: 1200
         steps:
-        - template: .azure-pipelines/common-templates/checkout.yml@self
-          parameters:
-            TargetBranch: ${{ parameters.BaseBranch }}
+        - script: |
+            git submodule update --init --recursive
+          displayName: "Initialize submodules"
+        - task: PowerShell@2
+          displayName: "Configure user"
+          inputs:
+            targetType: inline
+            pwsh: true
+            script: |
+              git config --global user.email "GraphTooling@service.microsoft.com"
+              git config --global user.name "Microsoft Graph DevX Tooling"
         - task: PowerShell@2
           name: "ComputeBranch"
           displayName: "Compute Module Command Metadata Refresh Branch Name"
@@ -76,28 +86,16 @@ extends:
             targetType: inline
             script: |
               $branch = "{0}/{1}" -f "$(Branch)", (Get-Date -Format yyyyMMddHHmm)
-              Write-Host "##vso[task.setvariable variable=RefreshBranch;isOutput=true]$branch" 
+              Write-Host "##vso[task.setvariable variable=RefreshBranch]$branch"
         - task: Bash@3
           displayName: "Create Module Command Metadata Refresh Branch"
           inputs:
             targetType: inline
             script: |
               git status
-              git branch $(ComputeBranch.RefreshBranch)
-              git checkout $(ComputeBranch.RefreshBranch)
-              git status               
-        
-      - job: MsGraphPsSdkModuleCommandMetadataGeneration
-        dependsOn: CreateMetadataRefreshBranch
-        displayName: Microsoft Graph PowerShell SDK Generation
-        condition: succeeded()
-        timeoutInMinutes: 840
-        variables:
-          RefreshBranch: $[ dependencies.CreateMetadataRefreshBranch.outputs['ComputeBranch.RefreshBranch'] ]
-        steps:
-        - template: .azure-pipelines/common-templates/checkout.yml@self
-          parameters:
-            TargetBranch: $(RefreshBranch)
+              git branch $(RefreshBranch)
+              git checkout $(RefreshBranch)
+              git status
         - template: .azure-pipelines/common-templates/install-tools.yml@self
         - template: .azure-pipelines/common-templates/security-pre-checks.yml@self
         - template: .azure-pipelines/generation-templates/authentication-module.yml@self
